# reddit-digest

./: .env.example  .gitignore  CLAUDE.md  COMPLETED_CHANGES.md  COMPLETION_REPORT.md  DEPLOYMENT.md  FINAL_SUMMARY.md  MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  STATUS.md  SUBREDDIT_SUMMARIZER_GUIDE.md  build_executable.sh  example_usage.py  generate_index.py  pyproject.toml  reddit_digest.spec  reddit_summarizer.py  requirements.txt  run_digest_scheduler.sh  summarize_subreddit.py  test_basic.py  test_reddit_summarizer.py
.claude/: ralph-loop.local.md
digest/: Bogleheads-month.md  Bogleheads-week.md  Bogleheads_digest_2025-12-08_to_2025-12-11.md  Bogleheads_digest_2025-12-09_to_2025-12-12.md  Bogleheads_digest_2025-12-10_to_2025-12-13.md  Bogleheads_digest_2025-12-11_to_2025-12-14.md  Bogleheads_digest_2025-12-12_to_2025-12-15.md  Bogleheads_digest_2025-12-13_to_2025-12-16.md  Bogleheads_digest_2025-12-14_to_2025-12-17.md  Bogleheads_top_week_2025-12-17.md  Bogleheads_top_week_2025-12-18.md  Bogleheads_top_week_2025-12-19.md  Bogleheads_top_week_2025-12-20.md  Bogleheads_top_week_2025-12-21.md  Bogleheads_top_week_2025-12-22.md  Bogleheads_top_week_2025-12-23.md  Bogleheads_top_week_2025-12-24.md  Bogleheads_top_week_2025-12-25.md  Bogleheads_top_week_2025-12-26.md  Bogleheads_top_week_2025-12-27.md  Bogleheads_top_week_2025-12-28.md  Bogleheads_top_week_2025-12-29.md  Bogleheads_top_week_2025-12-30.md  Bogleheads_top_week_2025-12-31.md  Bogleheads_top_week_2026-01-01.md  Bogleheads_top_week_2026-01-02.md  Fire-month.md  (+144 more)
(+64 files in other folders)
